--- a/page.html
+++ b/page.html
@@ -11,7 +11,8 @@
     <div class="main">
       <h1 ng-if="h1">CSS Test</h1>
       <h2>Testing CSS Transitions with AngularJS 1.2</h2>
-      <h3>by Nick Perkins 2013-10-19</h3><br><span>mod:</span>
+      <h3>by Nick Perkins 2013-10-19</h3>
+      <h5>The code is on <a href="https://github.com/nickperkinslondon/angular-css-animation-test">Github</a></h5><br><span>mod:</span>
       <input type="checkbox" ng-model="mod">
       <input type="checkbox" ng-model="mod2">
       <hr>
